--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <title>Klys.dev</title>
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-        <script src="https://cdn.jsdelivr.net/npm/@tailwindplus/elements@1" type="module"></script>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     </head>
     <body>
         <div class="bg-gray-900">
