--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <script>
+            console.log("Version 1.0")
+        </script>
     </head>
     <body>
         <div class="bg-gray-900">
