--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <link rel="icon" type="image/x-icon" href="/images/klys.dev-icon.png">
         <script>
-            console.log("Version 1.0")
+            console.log("Version 1.01")
         </script>
     </head>
     <body>
@@ -17,7 +18,7 @@
             <div class="flex lg:flex-1">
                 <a href="#" class="-m-1.5 p-1.5">
                 <span class="sr-only">KLYS.DEV</span>
-                <img src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=500" alt="" class="h-8 w-auto" />
+                <img src="/images/klys.dev-logo-crop.png" alt="" class="h-8 w-auto" />
                 </a>
             </div>
             <div class="flex lg:hidden">
@@ -78,7 +79,7 @@
             <div class="mx-auto max-w-2xl py-32 sm:py-48 lg:py-56">
             <div class="hidden sm:mb-8 sm:flex sm:justify-center">
                 <div class="relative rounded-full px-3 py-1 text-sm/6 text-gray-400 ring-1 ring-white/10 hover:ring-white/20">
-                Announcing our next round of funding. <a href="#" class="font-semibold text-indigo-400"><span aria-hidden="true" class="absolute inset-0"></span>Read more <span aria-hidden="true">&rarr;</span></a>
+                Junior Jimenez the Software Engineer. <a href="#" class="font-semibold text-indigo-400"><span aria-hidden="true" class="absolute inset-0"></span>Get the Resume <span aria-hidden="true">&rarr;</span></a>
                 </div>
             </div>
             <div class="text-center">
@@ -86,7 +87,7 @@
                 <p class="mt-8 text-lg font-medium text-pretty text-gray-400 sm:text-xl/8">Software Engineers building scalable systems across web, mobile, backend, and cloud..</p>
                 <div class="mt-10 flex items-center justify-center gap-x-6">
                 <a href="#" class="rounded-md bg-indigo-500 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-400 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-500">Get started</a>
-                <a href="#" class="text-sm/6 font-semibold text-white">Learn more <span aria-hidden="true">→</span></a>
+                <a href="#" class="text-sm/6 font-semibold text-white">Check out the projects <span aria-hidden="true">→</span></a>
                 </div>
             </div>
             </div>
